# appmenu-qt

./: CMakeLists.txt  NEWS  README  RELEASE_CHECK_LIST  appmenu-qt_0.2.4.orig.tar.bz2.delta  appmenu-qt_0.2.4.orig.tar.bz2.id  appmenu-qt_0.2.5.orig.tar.bz2.delta  appmenu-qt_0.2.5.orig.tar.bz2.id  appmenu-qt_0.2.6.orig.tar.bz2.delta  appmenu-qt_0.2.6.orig.tar.bz2.id
debian/: changelog  control  copyright  rules
src/: CMakeLists.txt  appmenuplatformmenubar.cpp  appmenuplatformmenubar.h
tests/: MANUAL_TESTS  multimenubars.py
